--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="app_cor_pele">Cor da Pele</string>
     <string name="app_veiculos">Veículos</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="app_star_war_people">Star Wars People</string>
 </resources>
